fix nowrap.

--- a/bot-shield-app/src/app/app.component.scss
+++ b/bot-shield-app/src/app/app.component.scss
@@ -89,6 +89,7 @@ footer {
   border: none;
   transition: background-color 0.3s, border-color 0.3s;
   background-color: var(--color-nav-tab);
+  white-space: nowrap;
 }
 
 .nav-menu a:hover {
